Issue #15 : Removed default memory options from env.sh.